k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark
  labels:
    app.kubernetes.io/name: spark
    app.kubernetes.io/component: processing
